# receipt2json

./: .gitignore  .pre-commit-config.yaml  README.md  Yolov11CustomReceiptDetection.ipynb  pyproject.toml  receipt_scanner.py  receipt_scanner_train.py  utils.py
.github/workflows/: formatting.yml
receipt_scanner/: config.yaml  receipt_scanner.py  utils.py
src/receipt_scanner/: __init__.py
