[project]
name = "receipt2json"
version = "0.1.0"
description = "This project aims to leverage deep-learning to extract text from supermarket receipts and convert them to json format."
requires-python = ">=3.10,<3.11"
authors = [
        {name = "Simon Keilbach", email = "s.keilbach51@gmail.com"}
    ]
dependencies = [
    "opencv-python-headless==4.10.0.84",
    "roboflow==1.1.58",
    "scikit-image==0.25.2",
    "scikit-learn==1.6.1",
    "scipy==1.15.2",
    "torch==2.6.0",
    "torchvision==0.21.0",
    "ultralytics==8.3.98",
    "tqdm",
    "imutils",
    "numpy==1.26.4",
    "progressbar",
    "pre-commit",
    ]

[project.optional-dependencies]
dev = [
    "ruff>=0.9.5",
    "uv>=0.1.18",
    ]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
ignore = ["C408", "C901", "E501", "E722", "E741"]
# Removed deprecated `ignore-init-module-imports`.
select = ["C", "D", "E", "F", "I", "UP", "W"]
